--- a/public/legal-notice/css/styles.css
+++ b/public/legal-notice/css/styles.css
@@ -621,13 +621,6 @@ video {
   position: relative;
 }
 
-.inset-0 {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
-
 .-inset-0\.5 {
   top: -0.125rem;
   right: -0.125rem;
@@ -642,11 +635,11 @@ video {
   left: 0px;
 }
 
-.-inset-1 {
-  top: -0.25rem;
-  right: -0.25rem;
-  bottom: -0.25rem;
-  left: -0.25rem;
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 
 .top-0 {
@@ -685,6 +678,18 @@ video {
   z-index: 20;
 }
 
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[10\] {
+  z-index: 10;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -716,6 +721,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -728,20 +737,12 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .block {
@@ -860,8 +861,8 @@ video {
   width: 6rem;
 }
 
-.w-\[27\.5rem\] {
-  width: 27.5rem;
+.w-\[27\.7rem\] {
+  width: 27.7rem;
 }
 
 .w-\[120\%\] {
@@ -890,6 +891,14 @@ video {
 
 .w-3 {
   width: 0.75rem;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-full {
@@ -1122,61 +1131,22 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-14 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
-}
-
-.divide-x > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(8px * var(--tw-divide-x-reverse));
-  border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
-}
-
-.divide-gray-500 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgba(107, 114, 128, var(--tw-divide-opacity));
-}
-
-.divide-green-500 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgba(16, 185, 129, var(--tw-divide-opacity));
-}
-
-.divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgba(156, 163, 175, var(--tw-divide-opacity));
 }
 
 .divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
@@ -1257,11 +1227,6 @@ video {
   border-color: rgba(245, 158, 11, var(--tw-border-opacity));
 }
 
-.border-gold {
-  --tw-border-opacity: 1;
-  border-color: rgba(210, 172, 74, var(--tw-border-opacity));
-}
-
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgba(107, 114, 128, var(--tw-border-opacity));
@@ -1306,6 +1271,11 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
@@ -1324,11 +1294,6 @@ video {
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1354,20 +1319,8 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-l {
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-logo-pink {
@@ -1375,40 +1328,17 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 15, 123, 0));
 }
 
-.from-yellow-500 {
-  --tw-gradient-from: #f59e0b;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(245, 158, 11, 0));
-}
-
 .from-red-500 {
   --tw-gradient-from: #ef4444;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
-}
-
-.from-red-600 {
-  --tw-gradient-from: #dc2626;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
-}
-
-.from-red-400 {
-  --tw-gradient-from: #f87171;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(248, 113, 113, 0));
 }
 
 .to-logo-orange {
   --tw-gradient-to: #F89B29;
 }
 
-.to-red-600 {
-  --tw-gradient-to: #dc2626;
-}
-
 .to-yellow-500 {
   --tw-gradient-to: #f59e0b;
-}
-
-.to-yellow-600 {
-  --tw-gradient-to: #d97706;
 }
 
 .bg-clip-text {
@@ -1499,6 +1429,11 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1567,6 +1502,10 @@ video {
   padding-right: 4rem;
 }
 
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
 }
@@ -1607,18 +1546,6 @@ video {
   padding-top: 0.5rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1629,6 +1556,10 @@ video {
 
 .font-montserrat {
   font-family: Montserrat, Arial, sans-serif;
+}
+
+.font-neon {
+  font-family: 'Quicksand', cursive;;
 }
 
 .text-2xl {
@@ -1707,9 +1638,9 @@ video {
   color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
-.text-gold {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgba(210, 172, 74, var(--tw-text-opacity));
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .text-gray-700 {
@@ -1727,9 +1658,9 @@ video {
   color: rgba(217, 119, 6, var(--tw-text-opacity));
 }
 
-.text-white {
+.text-gold {
   --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  color: rgba(210, 172, 74, var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -1767,6 +1698,16 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgba(243, 244, 246, var(--tw-text-opacity));
@@ -1780,36 +1721,12 @@ video {
   opacity: 0;
 }
 
-.opacity-100 {
-  opacity: 1;
-}
-
-.opacity-70 {
-  opacity: 0.7;
-}
-
-.opacity-75 {
-  opacity: 0.75;
-}
-
-.opacity-50 {
-  opacity: 0.5;
-}
-
-.opacity-40 {
-  opacity: 0.4;
-}
-
 .opacity-30 {
   opacity: 0.3;
 }
 
-.opacity-25 {
-  opacity: 0.25;
-}
-
-.opacity-20 {
-  opacity: 0.2;
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-inner {
@@ -1827,6 +1744,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-filter);
@@ -1834,11 +1756,6 @@ video {
 
 .blur-sm {
   --tw-blur: blur(4px);
-  filter: var(--tw-filter);
-}
-
-.blur-md {
-  --tw-blur: blur(12px);
   filter: var(--tw-filter);
 }
 
@@ -1884,6 +1801,10 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-100 {
+  transition-duration: 100ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
 }
@@ -1892,16 +1813,16 @@ video {
   transition-duration: 300ms;
 }
 
-.duration-700 {
-  transition-duration: 700ms;
-}
-
 .duration-1000 {
   transition-duration: 1000ms;
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .ease-out {
@@ -1920,9 +1841,8 @@ video {
   transform: var(--tw-transform);
 }
 
-.hover\:border-gold-light:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(255, 215, 0, var(--tw-border-opacity));
+.hover\:border-b-4:hover {
+  border-bottom-width: 4px;
 }
 
 .hover\:border-yellow-600:hover {
@@ -1930,18 +1850,8 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
-.hover\:border-yellow-500:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
-}
-
 .hover\:border-transparent:hover {
   border-color: transparent;
-}
-
-.hover\:bg-yellow-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
 
 .hover\:bg-white:hover {
@@ -1959,14 +1869,8 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.active\:border-yellow-700:active {
-  --tw-border-opacity: 1;
-  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
-}
-
-.active\:bg-yellow-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
+.active\:border-none:active {
+  border-style: none;
 }
 
 .active\:text-yellow-400:active {
@@ -1976,11 +1880,6 @@ video {
 
 .group:hover .group-hover\:overflow-y-auto {
   overflow-y: auto;
-}
-
-.group:hover .group-hover\:text-gold-light {
-  --tw-text-opacity: 1;
-  color: rgba(255, 215, 0, var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-yellow-600 {
@@ -2011,58 +1910,8 @@ video {
   opacity: 1;
 }
 
-.group:hover .group-hover\:opacity-90 {
-  opacity: 0.9;
-}
-
-.group:hover .group-hover\:opacity-75 {
-  opacity: 0.75;
-}
-
-.group:hover .group-hover\:opacity-50 {
-  opacity: 0.5;
-}
-
-.group:hover .group-hover\:opacity-40 {
-  opacity: 0.4;
-}
-
-.group:hover .group-hover\:opacity-70 {
-  opacity: 0.7;
-}
-
-.group:hover .group-hover\:opacity-60 {
-  opacity: 0.6;
-}
-
-.group:hover .group-hover\:blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-filter);
-}
-
-.group:hover .group-hover\:blur-lg {
-  --tw-blur: blur(16px);
-  filter: var(--tw-filter);
-}
-
-.group:hover .group-hover\:blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-filter);
-}
-
 .group:hover .group-hover\:duration-700 {
   transition-duration: 700ms;
-}
-
-.group:hover .group-hover\:duration-300 {
-  transition-duration: 300ms;
-}
-
-.dark .dark\:inset-0 {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
 }
 
 .dark .dark\:block {
@@ -2077,29 +1926,19 @@ video {
   display: none;
 }
 
-.dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgba(55, 65, 81, var(--tw-divide-opacity));
-}
-
 .dark .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgba(75, 85, 99, var(--tw-divide-opacity));
 }
 
-.dark .dark\:border-\[\#c7a246\] {
+.dark .dark\:border-\[\#410e05\] {
   --tw-border-opacity: 1;
-  border-color: rgba(199, 162, 70, var(--tw-border-opacity));
+  border-color: rgba(65, 14, 5, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#410e05\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(65, 14, 5, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-\[\#3d3d3d\] {
@@ -2136,14 +1975,14 @@ video {
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#1E1E1E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#791c0c\] {
   --tw-bg-opacity: 1;
   background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#1E1E1E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#272727\] {
@@ -2154,11 +1993,6 @@ video {
 .dark .dark\:bg-\[\#353535\] {
   --tw-bg-opacity: 1;
   background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -2195,11 +2029,6 @@ video {
   color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-\[\#c7a246\] {
-  --tw-text-opacity: 1;
-  color: rgba(199, 162, 70, var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -2225,6 +2054,11 @@ video {
   color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+
 .dark .dark\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
@@ -2235,50 +2069,18 @@ video {
   color: rgba(173, 174, 173, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-500 {
+.dark .dark\:text-red-500 {
   --tw-text-opacity: 1;
-  color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-
-.dark .dark\:opacity-30 {
-  opacity: 0.3;
-}
-
-.dark .dark\:opacity-50 {
-  opacity: 0.5;
+  color: rgba(239, 68, 68, var(--tw-text-opacity));
 }
 
 .dark .dark\:opacity-40 {
   opacity: 0.4;
 }
 
-.dark .dark\:opacity-60 {
-  opacity: 0.6;
-}
-
 .dark .dark\:shadow {
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-filter);
-}
-
-.dark .dark\:blur-lg {
-  --tw-blur: blur(16px);
-  filter: var(--tw-filter);
-}
-
-.dark .dark\:blur-sm {
-  --tw-blur: blur(4px);
-  filter: var(--tw-filter);
-}
-
-.dark .dark\:hover\:border-gold-light:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(255, 215, 0, var(--tw-border-opacity));
 }
 
 .dark .dark\:hover\:border-yellow-500:hover {
@@ -2288,11 +2090,6 @@ video {
 
 .dark .dark\:hover\:border-transparent:hover {
   border-color: transparent;
-}
-
-.dark .dark\:hover\:bg-\[\#8f220e\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(143, 34, 14, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-\[\#363636\]:hover {
@@ -2305,19 +2102,8 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
-.dark .dark\:active\:border-\[\#6e1a0b\]:active {
-  --tw-border-opacity: 1;
-  border-color: rgba(110, 26, 11, var(--tw-border-opacity));
-}
-
-.dark .dark\:active\:bg-\[\#6e1a0b\]:active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(110, 26, 11, var(--tw-bg-opacity));
-}
-
-.dark .group:hover .dark\:group-hover\:text-gold-light {
-  --tw-text-opacity: 1;
-  color: rgba(255, 215, 0, var(--tw-text-opacity));
+.dark .dark\:active\:border-none:active {
+  border-style: none;
 }
 
 .dark .group:hover .dark\:group-hover\:text-yellow-500 {
@@ -2328,18 +2114,6 @@ video {
 .dark .group:hover .dark\:group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-
-.dark .group:hover .dark\:group-hover\:opacity-50 {
-  opacity: 0.5;
-}
-
-.dark .group:hover .dark\:group-hover\:opacity-70 {
-  opacity: 0.7;
-}
-
-.dark .group:hover .dark\:group-hover\:opacity-80 {
-  opacity: 0.8;
 }
 
 @media (min-width: 768px) {
@@ -2364,12 +2138,20 @@ video {
     display: block;
   }
 
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
   .md\:h-80 {
     height: 20rem;
   }
 
   .md\:h-\[15rem\] {
     height: 15rem;
+  }
+
+  .md\:w-52 {
+    width: 13rem;
   }
 
   .md\:w-\[100\%\] {
@@ -2396,6 +2178,10 @@ video {
     justify-content: center;
   }
 
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
   .md\:divide-x > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -2413,6 +2199,11 @@ video {
   .md\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+  }
+
+  .md\:px-\[4\.40rem\] {
+    padding-left: 4.40rem;
+    padding-right: 4.40rem;
   }
 
   .md\:pb-10 {
@@ -2433,10 +2224,6 @@ video {
 
   .md\:pr-\[5\%\] {
     padding-right: 5%;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
   }
 
   .md\:pb-\[0\] {
@@ -2461,15 +2248,13 @@ video {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
-  .md\:hover\:scale-105:hover {
-    --tw-scale-x: 1.05;
-    --tw-scale-y: 1.05;
+  .md\:hover\:translate-y-\[-0\.15rem\]:hover {
+    --tw-translate-y: -0.15rem;
     transform: var(--tw-transform);
   }
 
-  .md\:hover\:shadow-xl:hover {
-    --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  .md\:hover\:border-b-4:hover {
+    border-bottom-width: 4px;
   }
 
   .group:hover .md\:group-hover\:scale-105 {
@@ -2485,10 +2270,6 @@ video {
 
   .group:hover .md\:group-hover\:opacity-50 {
     opacity: 0.5;
-  }
-
-  .dark .md\:dark\:bg-transparent {
-    background-color: transparent;
   }
 
   .dark .group:hover .md\:dark\:group-hover\:text-gray-300 {
